

public class Tags
{
    public const string PLAYER = "Player";
    public const string READYPOINT = "ReadyPoint";
}

public class SceneNames
{
    public const string MENU = "00-OfflineMode";
    public const string CHOOSE = "00-chooseScene";
    public const string OFFLINEMODE = "00-OfflineMode";
    public const string ONLINEMODE = "00-OnlineMode";
    public const string FIGHTGAME = "01-Game";
    public const string COOPERATIONGAME = "03-Game";
    public const string LEVEL = "02-Level";
    public const string LEVEL0 = "02-Level00";
    public const string LEVEL99 = "02-Level99";
}

public class AnimationTags
{
    public const string WALK_PARAMETER = "Walk";
    public const string RUN_PARAMETER = "Run";
    public const string ATTACK_TRIGGER = "Attack";
    public const string DEAD_TRIGGER = "Dead";
}
